--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <div class="row">
                     <div class="col-md-10 col-lg-7">
                       <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">INSTITUTO POLITECNICO NACIONAL</h6>
+                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">INSTITUTO POLITÉCNICO NACIONAL</h6>
                         <h2 data-caption-animate="slideInLeft" data-caption-delay="300">APLICACIONES MULTIMEDIA
                         </h2>
                       </div>
@@ -171,7 +171,7 @@
                   <div class="row">
                     <div class="col-md-10 col-lg-7">
                       <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">INSTITUTO POLITECNICO NACIONAL</h6>
+                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">INSTITUTO POLITÉCNICO NACIONAL</h6>
                         <h2 data-caption-animate="slideInLeft" data-caption-delay="300">APLICACIONES MULTIMEDIA</h2>
                       </div>
                     </div>
@@ -185,7 +185,7 @@
                   <div class="row">
                     <div class="col-md-10 col-lg-7">
                       <div class="box-animation">
-                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">INSTITUTO POLITECNICO NACIONAL</h6>
+                        <h6 data-caption-animate="slideInLeft" data-caption-delay="150">INSTITUTO POLITÉCNICO NACIONAL</h6>
                         <h2 data-caption-animate="slideInLeft" data-caption-delay="300">APLICACIONES MULTIMEDIA</h2>
                       </div>
                     </div>
@@ -202,10 +202,10 @@
         <div class="container">
           <div class="row row-50 justify-content-center justify-content-lg-between">
             <div class="col-12">
-              <h3 class="h-custom-1 f1">¿Que son las aplicaciones multimedia?</h3>
+              <h3 class="h-custom-1 f1">¿Qué son las aplicaciones multimedia?</h3>
             </div>
             <div class="col-md-6 col-lg-5 col-xl-3 wow fadeIn">
-              <p>Las aplicaciones multimedia son programas o software dedicados para procesar y presentar contenido que combinan diferentes tipos de medios, como texto, imagenes, audio, video y animaciones. Estas aplicaciones permiten la interaccion del usuario y se utilizan en diversos campos, como la educacion, el entretenimiento la comunicacion y la publicidad. 
+              <p>Las aplicaciones multimedia son programas o software dedicados para procesar y presentar contenido que combinan diferentes tipos de medios, como texto, imágenes, audio, video y animaciones. Estas aplicaciones permiten la interaccion del usuario y se utilizan en diversos campos, como la educacion, el entretenimiento la comunicacion y la publicidad. 
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay=".2s">
               <!-- lista de progreso tema principal-->
@@ -257,7 +257,7 @@
                 <!--texto alineado a la derecha del video-->
                 <h2>USO DE DIFERENTES MEDIOS</h2>
                
-                <p>El uso de los diferentes códigos o medios en la que se presenta la información debe realizarse integrándolos de forma coherentes, teniendo en cuenta la utilidad y funcionalidad de los mismos dentro del programa. Y, la inclusión de diferentes medios de comunicación -auditivo, visual- facilita el aprendizaje, adaptándose en mayor medida a los sujetos, a sus características y capacidades (pueden potenciar: memoria visual, comprensión visual, memoria auditiva, comprensión oral, etc.). </p>
+                <p>El uso de los diferentes códigos o medios en la que se presenta la información debe realizarse integrándolos de forma coherente, teniendo en cuenta la utilidad y funcionalidad de los mismos dentro del programa. Y, la inclusión de diferentes medios de comunicación -auditivo, visual- facilita el aprendizaje, adaptándose en mayor medida a los sujetos, a sus características y capacidades (pueden potenciar: memoria visual, comprensión visual, memoria auditiva, comprensión oral, etc.). </p>
               </div>
             </div>
             <div class="col-md-11 col-lg-6">
