--- a/temarioprueba.html
+++ b/temarioprueba.html
@@ -39,7 +39,7 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">INICIO</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">TEMARIO</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="temarioprueba.html">CONTENIDO</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="noticias.html">NOTICIAS</a>
                     </li>
@@ -121,7 +121,7 @@
                 <div onclick="toggleSubtemas('subtema10')">
                   <a href="No.1.2.3.html">
                     <img src="images/tecnolgiavirtual.webp" alt="Subtema 10">
-                    <span>1.2.3 Tecnologia de realidad virtual.</span>
+                    <span>1.2.3 TecnologÍa de realidad virtual.</span>
                   </a>  
                 </div>
                 <div onclick="toggleSubtemas('subtema11')">
@@ -151,7 +151,7 @@
                 <div onclick="toggleSubtemas('subtema15')">
                   <a href="No.1.3.3.html">
                     <img src="images/nucelovideojuago.jpg" alt="Subtema 15">
-                    <span>1.3.3 Uso y aplicacion del engine como nucleo del videojuego.</span>
+                    <span>1.3.3 Uso y aplicaciÓn del engine como nucleo del videojuego.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema16')">
@@ -206,13 +206,13 @@
         </div>
         <br>
   <!-- Inicio de la unidad 2 -->
-        <div class="tema" onclick="toggleSubtemas('tema2')">Unidad II <br>Tecnologias para el desarrollo de aplicaciones multimedia</div>
+        <div class="tema" onclick="toggleSubtemas('tema2')">Unidad II <br>Tecnologías para el desarrollo de aplicaciones multimedia</div>
         <div id="tema2" class="subtemas">
             <div class="mosaico">
                 <div onclick="toggleSubtemas('subtema1')">
                   <a href="No.2.1.html">
                     <img src="/images/2.1.png" alt="Subtema 1">
-                    <span>2.1 Las tecnologias de desarrollo multimedia.</span>
+                    <span>2.1 Las tecnologías de desarrollo multimedia.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema2')">
@@ -278,7 +278,7 @@
                 <div onclick="toggleSubtemas('subtema1')">
                   <a href="No.3.1.html">
                     <img src="3.1.jpg" alt="Subtema 1">
-                    <span>3.1 Proceso de desarrollo de una aplicacon multimedia.</span>
+                    <span>3.1 Proceso de desarrollo de una aplicacíon multimedia.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema2')">
@@ -290,7 +290,7 @@
                 <div onclick="toggleSubtemas('subtema3')">
                   <a href="No.3.1.2.html">
                     <img src="3.1.2.jpg" alt="Subtema 3">
-                    <span>3.1.2 Propuesta grafica justificacion.</span>
+                    <span>3.1.2 Propuesta gráfica justificación.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema4')">
@@ -302,13 +302,13 @@
                 <div onclick="toggleSubtemas('subtema5')">
                   <a href="No.3.2.1.html">
                     <img src="3.2.1.jpg" alt="Subtema 5">
-                    <span>3.2.1 Diseño del concepto de la aplicacion.</span>
+                    <span>3.2.1 Diseño del concepto de la aplicación.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema6')">
                   <a href="No.3.2.2.html">
                     <img src="3.2.2.jpg" alt="Subtema 6">
-                    <span>3.2.2 Manual de diseño grafico.</span>
+                    <span>3.2.2 Manual de diseño gráfico.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema7')">
@@ -320,13 +320,13 @@
                 <div onclick="toggleSubtemas('subtema8')">
                   <a href="No.3.3.html">
                     <img src="3.3.jpg" alt="Subtema 8">
-                    <span>3.3 Modelado de la interfaz grafica.</span>
+                    <span>3.3 Modelado de la interfaz gráfica.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema9')">
                   <a href="No.3.3.1.html">
                     <img src="3.3.1.jpg" alt="Subtema 9">
-                    <span>3.3.1 Usabilidad de la aplicacion multimedia.</span>
+                    <span>3.3.1 Usabilidad de la aplicación multimedia.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema10')">
@@ -338,31 +338,31 @@
                 <div onclick="toggleSubtemas('subtema11')">
                   <a href="No.3.3.3.html">
                     <img src="3.3.3.jpg" alt="Subtema 11">
-                    <span>3.3.3 Integracion del modelado.</span>
+                    <span>3.3.3 Integración del modelado.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema12')">
                   <a href="No.3.4.html">
                     <img src="3.4.jpg" alt="Subtema 12">
-                    <span>3.4 Implementacion de la aplicacion multimedia.</span>
+                    <span>3.4 Implementación de la aplicacion multimedia.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema13')">
                   <a href="No.3.4.1.html">
                     <img src="3.4.1.jpg" alt="Subtema 13">
-                    <span>3.4.1 Prueba de integracion.</span>
+                    <span>3.4.1 Prueba de integración.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema14')">
                   <a href="No.3.4.2.html">
                     <img src="3.4.2.jpg" alt="Subtema 14">
-                    <span>3.4.2 Implementacion del proyecto.</span>
+                    <span>3.4.2 Implementación del proyecto.</span>
                   </a>
                 </div>
                 <div onclick="toggleSubtemas('subtema15')">
                   <a href="No.3.4.3.html">
                     <img src="3.4.3.jpg" alt="Subtema 15">
-                    <span>3.4.3 Puesta en produccion.</span>
+                    <span>3.4.3 Puesta en producción.</span>
                   </a>
                 </div> 
             </div>
@@ -410,7 +410,7 @@
 
 <footer class="footer">
 <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
