--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
     Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
