--- a/No.1.1.1.html
+++ b/No.1.1.1.html
@@ -115,7 +115,7 @@ transform-style: preserve-3d;}
         </div>
         
               <div class="titulo-fijo" id="tituloFijo">
-                APLICACIONES EN LA EDUCACIÓN.
+                1.1.1 APLICACIONES EN LA EDUCACIÓN.
             </div>
               <style>
 
@@ -391,12 +391,12 @@ transform-style: preserve-3d;}
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
+    <p>© 2025 Instituto Politécnio Nacional. Todos los derechos reservados.<br>
     Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
