--- a/No.1.1.2.html
+++ b/No.1.1.2.html
@@ -111,7 +111,7 @@
             </div>
 
             <div class="titulo-fijo" id="tituloFijo">
-                Aplicaciones en los negocios.
+                1.1.2 Aplicaciones en los negocios.
             </div>
             <style>
 
@@ -186,9 +186,9 @@
                             <h1 class="h1fixed"></h1>
                             <p>
                                 En la actualidad, las aplicaciones multimedia han revolucionado el mundo de los negocios, transformando
-                                la forma en que las empresas se comunican, operan y comercializan sus productos y servicios. La integración
+                                la forma en que las empresas se comunicación, operan y comercializan sus productos y servicios. La integración
                                 de tecnologías multimedia en los negocios no solo ha optimizado la productividad, sino que también ha mejorado
-                                la experiencia del cliente y ha permitido estrategias de marketing más efectivas. En este ensayo, se analizarán los
+                                la experiencia del cliente y ha permitido estrategias de marketing más efectivas. Se analizarán los
                                 distintos tipos de aplicaciones multimedia en los negocios, sus beneficios y los desafíos que presentan.
                             </p>
                           <p>
@@ -355,12 +355,12 @@
 </style>
 
 <footer class="footer">
-     <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
+     <p>© 2025 Instituto Polítécnico Nacional. Todos los derechos reservados.<br>
     Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
