--- a/No.1.1.2.html
+++ b/No.1.1.2.html
@@ -356,7 +356,7 @@
 
 <footer class="footer">
      <p>© 2025 Instituto Polítécnico Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
