--- a/No.1.1.1.html
+++ b/No.1.1.1.html
@@ -392,7 +392,7 @@ transform-style: preserve-3d;}
 
 <footer class="footer">
     <p>© 2025 Instituto Politécnio Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
