--- a/No.1.1.html
+++ b/No.1.1.html
@@ -401,7 +401,7 @@
 
 <footer class="footer">
     <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
