--- a/No.1.1.4.html
+++ b/No.1.1.4.html
@@ -105,7 +105,7 @@
         </div>
         
               <div class="titulo-fijo" id="tituloFijo">
-                APLICACIONES EN LA AUDITORIA.
+                1.1.4 APLICACIONES EN LA AUDITORIA.
             </div>
               <style>
 
@@ -368,12 +368,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politénico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitécnico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
