--- a/No.1.4.2.html
+++ b/No.1.4.2.html
@@ -101,7 +101,7 @@
         </div>
         
               <div class="titulo-fijo" id="tituloFijo">
-                Tecnologia de la realidad aumentada.
+                1.4.2 Tecnología de la realidad aumentada.
             </div>
               <style>
 
@@ -157,7 +157,7 @@
               
       </header>
       <br><br>
-      <div class="container"><h3>1.4.2Tecnologia de la realidad aumentada.</h3></div>
+      <div class="container"><h3>1.4.2 Tecnología de la realidad aumentada.</h3></div>
 
        <!-- Base de imagenes lateral derecha -->
         <div class="container">
@@ -432,12 +432,12 @@ El proceso técnico de la RA sigue una secuencia crítica:
 </style>
 
 <footer class="footer">
-   <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+   <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
