--- a/No.1.5.html
+++ b/No.1.5.html
@@ -108,7 +108,7 @@
 
             <!--Aqui puede ir otro titulo-->
             <div class="titulo-fijo" id="tituloFijo">
-                En las cuidades digitales.
+                1.5 En las ciudades digitales.
             </div>
             <style>
 
@@ -422,12 +422,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politecnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
