--- a/No.2.1.1.html
+++ b/No.2.1.1.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="titulo-fijo" id="tituloFijo">
-                Lenguajes de programacion multimedia.
+                2.1.1 Lenguajes de programación multimedia.
             </div>
             <style>
 
@@ -159,7 +159,7 @@
 
         </header>
         <br><br>
-        <div class="container"><h3>2.1.1 Lenguajes de programacion multimedia.</h3></div>
+        <div class="container"><h3>2.1.1 Lenguajes de programación multimedia.</h3></div>
         <!-- Base de imagenes lateral derecha -->
         <div class="container">
             <div class="row row-50 flex-lg-row-reverse">
@@ -184,7 +184,7 @@
                         <li>
                             <p>
 
-                                En la era digital, los lenguajes de programación multimedia se han convertido en herramientas 
+                                En la era digítal, los lenguajes de programación multimedia se han convertido en herramientas 
                               fundamentales para el desarrollo de aplicaciones interactivas, videojuegos, animaciones, realidad 
                               virtual y otros contenidos digitales. Estos lenguajes permiten integrar diferentes tipos de medios, 
                               como texto, imágenes, audio y video, en un solo entorno interactivo. Este ensayo explora los principales 
@@ -347,12 +347,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
