--- a/No.2.1.4.html
+++ b/No.2.1.4.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="titulo-fijo" id="tituloFijo">
-                Programacion con dispositivos moviles.
+                2.1.4 Programación con dispositivos moviles.
             </div>
             <style>
 
@@ -159,7 +159,7 @@
 
         </header>
         <br><br>
-        <div class="container"><h3>2.1.4 Programacion con dispositivos moviles.</h3></div>
+        <div class="container"><h3>2.1.4 Programación con dispositivos moviles.</h3></div>
         <!-- Base de imagenes lateral derecha -->
         <div class="container">
             <div class="row row-50 flex-lg-row-reverse">
@@ -345,12 +345,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
