--- a/No.3.1.2.html
+++ b/No.3.1.2.html
@@ -135,7 +135,7 @@
               </div>
 
               <div class="titulo-fijo" id="tituloFijo">
-                  PROPUESTA GRAFICA JUSTIFICACION.
+                  3.2.1 PROPUESTA GRÁFICA JUSTIFICACIÓN.
               </div>
               <style>
 
@@ -428,12 +428,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
