--- a/No.3.1.html
+++ b/No.3.1.html
@@ -118,7 +118,7 @@ transform-style: preserve-3d;}
             </div>
 
             <div class="titulo-fijo" id="tituloFijo">
-                PROCESO DE DESARROLLO DE UNA APLICACION MULTIMEDIA.
+                3.1 PROCESO DE DESARROLLO DE UNA APLICACIÓN MULTIMEDIA.
             </div>
             <style>
 
@@ -380,12 +380,12 @@ transform-style: preserve-3d;}
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Polítécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
