--- a/No.3.2.1.html
+++ b/No.3.2.1.html
@@ -111,7 +111,7 @@
             </div>
 
             <div class="titulo-fijo" id="tituloFijo">
-                DISEÑO DEL CONCEPTO DE UNA APLICACION MULTIMEDIA.
+                3.2.1 DISEÑO DEL CONCEPTO DE UNA APLICACIÓN MULTIMEDIA.
             </div>
             <style>
 
@@ -163,7 +163,7 @@
 
         </header>
         <br><br>
-        <div class="container"><h3>3.2.1 Diseño del concepto de una aplicacion multimedia.</h3></div>
+        <div class="container"><h3>3.2.1 Diseño del concepto de una aplicación multimedia.</h3></div>
 
         <!-- Base de imagenes lateral derecha -->
         <div class="container">
@@ -395,12 +395,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
