--- a/No.3.3.1.html
+++ b/No.3.3.1.html
@@ -108,7 +108,7 @@
 
 
             <div class="titulo-fijo" id="tituloFijo">
-                Usabilidad de la aplicacion multimedia.
+                3.3.1 Usabilidad de la aplicación multimedia.
             </div>
             <style>
 
@@ -160,7 +160,7 @@
 
         </header>
         <br><br>
-        <div class="container"><h3>3.3.1 Usabilidad de la aplicacion multimedia.</h3></div>
+        <div class="container"><h3>3.3.1 Usabilidad de la aplicación multimedia.</h3></div>
 
         <!-- Base de imagenes lateral derecha -->
         <div class="container">
@@ -379,12 +379,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
