--- a/No.3.3.html
+++ b/No.3.3.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="titulo-fijo" id="tituloFijo">
-                MODELO DE LA INTERFAZ GRAFICA.
+                3.3 MODELO DE LA INTERFAZ GRÁFICA.
             </div>
             <style>
 
@@ -161,7 +161,7 @@
         <br><br>
         <div class="container">
             <h3>
-                3.3 Modelo de la interfaz grafica.
+                3.3 Modelo de la interfaz gráfica.
             </h3>
         </div>
 
@@ -383,12 +383,12 @@
 </style>
 
 <footer class="footer">
-    <p>© 2025 Instituto Político Nacional. Todos los derechos reservados.<br>
-    Este sitio web y su contenido son propiedad del Instituto Político Nacional.<br> 
+    <p>© 2025 Instituto Politécnico Nacional. Todos los derechos reservados.<br>
+    Este sitio web y su contenido son propiedad del Instituto Politécnico Nacional.<br> 
     Queda prohibida la reproducción, distribución o modificación total o parcial 
     sin autorización previa por escrito.<br>
     Sitio web desarrollado por la Universidad UPIICSA.<br>
     Para consultas o permisos de uso, contáctenos en 
-    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitico.com</a>.</p>
+    <a href="mailto:contacto@institutopolitico.com">contacto@institutopolitécnico.com</a>.</p>
 </footer>
 </html>
